gitops/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-envoy-demo
  namespace: envoy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-envoy-demo
  template:
    metadata:
      labels:
        app: python-envoy-demo
    spec:
      containers:
      - name: poc
        image: us-central1-docker.pkg.dev/playground-s-11-31f44a5d/my-repo/poc:v1     
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: python-envoy-service
  namespace: envoy
spec:
  type: ClusterIP
  selector:
    app: python-envoy-demo
  ports:
  - port: 80
    targetPort: 8000
