gitops/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: multi-app-route
  namespace: gateway-api-demo
spec:
  parentRefs:
  - name: traefik-gateway
  hostnames:
    - "traefikgw.34.16.10.39.nip.io"
  rules:
  - filters:
    - type: ExtensionRef
      extensionRef:
        group: traefik.io
        kind: Middleware
        name: pass-client-cert
    matches:
    - hostname: "traefikgw.34.16.10.39.nip.io"
    backendRefs:
    - name: gateway-api-demo-service
      port: 80
