gitops/ingess.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: haproxy-ingress
  namespace: haproxy-system
  annotations:
    kubernetes.io/ingress.class: "haproxy"
    # 1. Community Edition mTLS Annotations
    haproxy.org/auth-tls-secret: "haproxy-system/my-ca-secret"
    haproxy.org/auth-tls-verify-client: "on"
    
    # 2. Community Edition Snippet Annotation
    haproxy.org/config-backend: |
      http-request set-header ssl-client-cert %[ssl_c_der,base64]
      http-request set-header x-proxy-id haproxy-ingress
spec:
  ingressClassName: haproxy
  tls:
  - hosts:
    - haproxy.34.122.191.191.nip.io
    secretName: haproxy-server-certs
  rules:
  - host: haproxy.34.122.191.191.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: haproxy-service
            port:
              number: 80
