gitops/nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
    nginx.ingress.kubernetes.io/auth-tls-secret: "ingress-nginx/my-ca-secret"
    nginx.ingress.kubernetes.io/auth-tls-pass-certificate-to-upstream: "true"

spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - nginx.34.46.244.156.nip.io
    secretName: nginx-server-certs

  rules:
  - host: nginx.34.46.244.156.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: python-nginx-service
            port:
              number: 80
